fix(#14257): glossary term name get fully truncate for long text in glossary table (#14469)
* fix: glossary term name get fully truncate for long text

* fix a type issue in explore-page-v1 component

* fix some alignment of text and term icon

* fix the max width of name column in glossary table

* minor change

* minor change

* fix ellipsis issue for table column glossary term

* restrict term icon view based on height instead of width

* remove unwanted class

* revert back w-max-90 class

---------

--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/table.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/table.less
@@ -41,8 +41,8 @@
             }
 
             .expand-cell-empty-icon-container {
-              width: 18px;
-              height: 16px;
+              width: 8px;
+              height: 12px;
               display: inline-flex;
             }
           }
